# systemsecurity_lab

./: .gitignore  README.md  environment.yaml
hw/secure-sensor-v1/: secure-sensor.c
hw/secure-sensor-v2/: makefile  secure-sensor.c
hw/secure-sensor-v3/: secure-sensor.c
labs/: 01-setup-lab.ipynb  02-cryptography.ipynb  03-SCA.ipynb  04-FA.ipynb  06-TEE.ipynb  07-SupplyChain.ipynb  08-PPT.ipynb  utils.py
labs/05-CacheSCA/: CMakeLists.txt  README.md  attacker.c  victim.out
labs/05-CacheSCA/include/: common.h
labs/07-SupplyChain/: requirements_DONOTUSE.txt  rsa_trojan.dot
labs/reference/: present.py
labs/traces/: 03-PRESENT-PTS.npy  03-PRESENT-TRACES.npy  04-PRESENT-CT  04-PRESENT-CT.npy  04-PRESENT-DIFFS  04-PRESENT-DIFFS.npy  04-PRESENT-PT  04-PRESENT-PT.npy
